force-app/main/default/objects/ASL__AssureSign_Configuration__c/ASL__AssureSign_Configuration__c.object-meta.xml
<CustomObject>
    <label>AssureSign Configuration</label>
    <nameField>
        <label>AssureSign Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AssureSign Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>