force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ASL__Account_ID__c</fullName>
    <description>User Context</description>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>