force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__API_User_Name__c.field-meta.xml
<CustomField>
    <fullName>ASL__API_User_Name__c</fullName>
    <label>API User Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>