force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__Base_URL__c.field-meta.xml
<CustomField>
    <fullName>ASL__Base_URL__c</fullName>
    <label>Base URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>