force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>ASL__Configuration_Type__c</fullName>
    <label>Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>