force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__Custom_Environment__c.field-meta.xml
<CustomField>
    <fullName>ASL__Custom_Environment__c</fullName>
    <label>Custom Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>