force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__Environment__c.field-meta.xml
<CustomField>
    <fullName>ASL__Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>https://account.assuresign.net</fullName>
            </value>
            <value>
                <fullName>https://ca1.assuresign.net</fullName>
            </value>
            <value>
                <fullName>https://eu1.assuresign.net</fullName>
            </value>
            <value>
                <fullName>https://na1.assuresign.net</fullName>
            </value>
            <value>
                <fullName>https://www.assuresign.net</fullName>
            </value>
            <value>
                <fullName>https://sb.assuresign.net</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>