force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>ASL__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>