force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__Profile__c.field-meta.xml
<CustomField>
    <fullName>ASL__Profile__c</fullName>
    <label>Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>