force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__User__c.field-meta.xml
<CustomField>
    <fullName>ASL__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssureSign_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>