force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__User_Name__c.field-meta.xml
<CustomField>
    <fullName>ASL__User_Name__c</fullName>
    <label>User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>