force-app/main/default/objects/ASL__AssureSign_Configuration__c/fields/ASL__User_Type__c.field-meta.xml
<CustomField>
    <fullName>ASL__User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>AssureSign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>